--- a/style.css
+++ b/style.css
@@ -13,5 +13,9 @@ html, body {
     width: 100vw;
     height: 100vh;
     background: url('./Level/Battleground2/Bright/Battleground2.png') no-repeat center center;
-    background-size: cover; /* Stretches and fits the image */
+    background-size: cover; 
+}
+
+.player{
+    display: none;
 }
